package ucf.assignments;

import javafx.collections.ObservableSet;

public class InventoryList {
    ObservableSet<InventoryItem> InventoryList;
}
